force-app/main/default/objects/Org_Connection__mdt/Org_Connection__mdt.object-meta.xml
<CustomObject>
    <label>Org Connection</label>
    <pluralLabel>Org Connections</pluralLabel>
</CustomObject>