force-app/main/default/objects/Org_Connection__mdt/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <label>Instance URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>