force-app/main/default/objects/Org_Connection__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>