force-app/main/default/objects/Org_Connection__mdt/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <label>Org Name</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>